fix: fix horizontal scroll in top-selling

--- a/src/components/top-selling-this-week/top-selling-this-week.module.scss
+++ b/src/components/top-selling-this-week/top-selling-this-week.module.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	background: #e3ebe0;
 	padding: 88px 0 96px;
+	overflow: hidden;
 
 	@media screen and (width <= 768px) {
 		padding: 20px 0 25px;
@@ -17,6 +18,7 @@
 	@media screen and (width <= 768px) {
 		width: 100%;
 		padding-left: 20px;
+		max-width: 550px;
 	}
 }
 
